--- a/css/style_css_a.css
+++ b/css/style_css_a.css
@@ -12,8 +12,8 @@
     position: relative;
      width: 100%;
     max-width: 360px;
-    height: 420px;
-    color: black;
+    min-height: 420px;
+    height: 1px;
     background-image: url(../img/img_fon_header_adaptiv.png);
     font-family: 'Ubuntu', sans-serif;
     font-style: normal;
@@ -21,6 +21,8 @@
     font-size: 24px;
     overflow: hidden;
     color:  white;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .gradient_contact {
         position: absolute;
@@ -182,7 +184,7 @@ box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
         position: relative;
         bottom: 0;
         background-repeat: no-repeat;
-    background-size: 120%;
+        background-size: cover;
    overflow: hidden;
 }
 .edu_center {
@@ -250,9 +252,6 @@ box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding-bottom: 17%;
     margin: 4%;
 }    
-.ballast {
-    
-}
 .ar {
     margin-left: 5px;
 }
@@ -647,7 +646,7 @@ box-sizing: border-box;
 .about_footer {
     position: relative;
     width: 100%;
-    max-width: 1510px;
+    max-width: 360px;
     min-height: 617px;
     height: 1px;
 }
@@ -678,11 +677,9 @@ color: white;
 
 .footer {
     position: relative;
-   
+    min-height: 340px;
     width: 100%;  
     max-width: 360px;  
-    min-height: 340px;
-    height: 1px;
     background-image: url(../img/img_map_adaptiv.png);
     background-repeat: no-repeat;
     background-size: cover;
