--- a/css/style_css.css
+++ b/css/style_css.css
@@ -1331,12 +1331,9 @@ color: white;
 }
 .ikonki_m {
     position: relative;
-    left: 45px;
     top: 75px;
-    width: 70%;
     display: flex;
-    justify-content: space-between;
-    align-content: space-between;
+    justify-content: space-around;
 }
 .text_about_m {
     position: relative;
@@ -1598,6 +1595,9 @@ a.test_c:hover {
     top: 13vw;
     left: 25vw;
 }
+.romb_norv_c:hover {
+    transform: rotate(45deg) scale(1.07);
+}
 .romb_norv_flex_c {
     width: 13vw;
     height: 8vw;
@@ -1652,6 +1652,9 @@ margin-top: 1vw;
     left: 36vw;
     top: -11vw;
 }
+.romb_islan_c:hover {
+    transform: rotate(45deg) scale(1.07);
+}
 .foto_islan_c {
     position: relative;
     transform: rotate(-45deg);
@@ -1668,6 +1671,9 @@ margin-top: 1vw;
     align-items: center;
     left: 47vw;
     top: -13vw;
+}
+.romb_shved_c:hover {
+    transform: rotate(45deg) scale(1.07);
 }
 .foto_shved_c {
     position: relative;
@@ -1686,6 +1692,9 @@ margin-top: 1vw;
     left: 58vw;
     top: -37vw;
 }
+.romb_fin_c:hover {
+    transform: rotate(45deg) scale(1.07);
+}
 .foto_fin_c {
     position: relative;
     transform: rotate(-45deg);
@@ -1702,6 +1711,9 @@ margin-top: 1vw;
     align-items: center;
     left: 81vw;
     top: -50vw;
+}
+.romb_dat_c:hover {
+    transform: rotate(45deg) scale(1.07);
 }
 .foto_dat_c {
     position: relative;
@@ -1786,6 +1798,10 @@ margin-right: 10px;
 margin-top: 20px;
 margin-bottom: 20px;
 }
+.yrovni_c:hover {
+    transform: scale(1.05);
+    background: rgba(0, 0, 0, 0.7);
+  }
 .znachki_c {
     margin: 10px;
 }
@@ -2029,6 +2045,10 @@ border: 1px solid #FFFFFF;
 box-sizing: border-box;
 box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+.flex_zapis_c:hover {
+    transform: scale(1.1);
+    border: 2px solid  #BACBDC;
+  }
 .flex_zapis_text_c {
     display: flex;
     flex-direction: column;
@@ -2532,15 +2552,20 @@ margin-left: 35px;
         left: -33vw;
     }
     .contacts_text {
-        width: 75%;
-        margin: 30px;
+        align-items: flex-end;
+        margin-left: 57vw;
+        flex-direction: column;
+        width: auto;
+    }
+    .menu_tab {
+        width: 65%;
     }
     .contacts {
         flex-direction: column;
+        align-items: flex-start;
     }
     .logo {
         display: flex;
-        justify-content: center;
         padding-left: 0;
     }
     .slaider {
